fixed padding on texts and flex wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -507,6 +507,7 @@ footer #fnav .nav-wrapper .nav-wrapper-active-link a {
   font-weight: bold;
   font-size: 1.5em;
 }
+/* Compliments*/
 .review {
   display: flex;
   justify-content: center;
@@ -515,8 +516,17 @@ footer #fnav .nav-wrapper .nav-wrapper-active-link a {
   line-height: 1.8rem;
   background-color: floralwhite;
   padding: 1%;
+  width: 100%;
 }
 @media (max-width:600px) {
+  .review{
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+ 
+}
+@media (min-width:601px) and (max-width:781px) {
   .review{
     flex-wrap: wrap;
     justify-content: center;
@@ -539,6 +549,15 @@ footer #fnav .nav-wrapper .nav-wrapper-active-link a {
   }
   
 }
+@media (min-width:601px) and (max-width:781px) {
+  .review .Face{
+    width: 90%;
+    padding-bottom: 2%;
+    text-align: center;
+  }
+  
+}
+
 .review .Face span {
   margin: 2%;
   font-size: 1.3rem;
@@ -567,13 +586,23 @@ footer #fnav .nav-wrapper .nav-wrapper-active-link a {
   .review .description{
     width: 100%;
     text-align: center;
+    padding-top: 2%;
     
   }
   
 }
-@media (min-width:601px) and (max-width:780px) {
+@media (min-width:601px) and (max-width:781px) {
   .review .description{
-    margin-bottom: 50%;
+    width: 100%;
+    text-align: center;
+    padding-top: 2%;
+    
+  }
+  
+}
+@media (min-width:782px){
+  .review .description{
+    padding-bottom: 10%;
   }
    
 }
@@ -583,6 +612,7 @@ footer #fnav .nav-wrapper .nav-wrapper-active-link a {
   justify-content: center;
   font-size: 1.2rem;
   font-weight: 400;
+  text-align: center;
   width: 100%;
   line-height: 1.8rem;
   background-color: floralwhite;
@@ -922,6 +952,7 @@ footer #fnav .nav-wrapper .nav-wrapper-active-link a {
   font-size: 2.5rem;
   font-weight: 800;
   padding-top: 3%;
+  padding-left: 10%;
 }
 @media (max-width:600px) {
   .ct h2{
